// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VocabularyCard Component > Snapshot Tests > should match snapshot for compact mode 1`] = `
<div
  aria-label="Vocabulary card for magnificent"
  class="rounded-lg border bg-card text-card-foreground shadow-sm  vocabulary-card compact  "
  role="article"
  tabindex="0"
>
  <div
    class="flex flex-col space-y-1.5 p-6 "
  >
    <div
      class="flex items-start justify-between"
    >
      <div
        class="flex-1"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight text-xl"
        >
          magnificent
        </h3>
        <p
          class="text-sm text-muted-foreground mt-1"
        >
          adjective
        </p>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <button
          aria-label="Play pronunciation"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors"
          title="Play pronunciation"
        >
          <svg
            class="lucide lucide-volume2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"
            />
            <path
              d="M15.54 8.46a5 5 0 0 1 0 7.07"
            />
            <path
              d="M19.07 4.93a10 10 0 0 1 0 14.14"
            />
          </svg>
        </button>
        <button
          aria-label="Add to favorites"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors text-gray-400"
          title="Add to favorites"
        >
          <svg
            class="lucide lucide-heart h-4 w-4 "
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0 "
  >
    <div
      class="space-y-4"
    >
      <button
        aria-label="Show Spanish"
        class="w-full py-3 px-4 bg-blue-50 dark:bg-blue-900/20 hover:bg-blue-100 dark:hover:bg-blue-900/30 rounded-lg transition-colors text-blue-700 dark:text-blue-300 font-medium"
      >
        Flip to Spanish →
      </button>
      <div>
        <h4
          class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
        >
          Definition
        </h4>
        <p
          class="text-gray-600 dark:text-gray-400"
        >
          Extremely beautiful, elaborate, or impressive
        </p>
      </div>
      <div>
        <h4
          class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
        >
          Pronunciation
        </h4>
        <p
          class="font-mono text-sm text-gray-600 dark:text-gray-400"
        >
          mæɡˈnɪfɪsənt
        </p>
      </div>
      <div
        class="space-y-3 pt-2 border-t border-gray-200 dark:border-gray-700"
      >
        <div>
          <div
            class="flex items-center justify-between mb-1"
          >
            <span
              class="text-xs font-medium text-gray-700 dark:text-gray-300"
            >
              Mastery Level
            </span>
            <span
              class="text-xs font-semibold text-gray-900 dark:text-gray-100"
            >
              0
              %
            </span>
          </div>
          <div
            class="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-2"
          >
            <div
              aria-label="Mastery level: 0%"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="h-2 rounded-full transition-all duration-300 bg-red-500"
              role="progressbar"
              style="width: 0%;"
            />
          </div>
        </div>
        <div
          class="grid grid-cols-3 gap-2 text-xs"
        >
          <div
            class="text-center"
          >
            <div
              class="font-semibold text-gray-900 dark:text-gray-100"
            >
              0
            </div>
            <div
              class="text-gray-500 dark:text-gray-400"
            >
              Reviewed
            </div>
          </div>
          <div
            class="text-center"
          >
            <div
              class="font-semibold text-gray-900 dark:text-gray-100"
            >
              Never
            </div>
            <div
              class="text-gray-500 dark:text-gray-400"
            >
              Last Review
            </div>
          </div>
          <div
            class="text-center"
          >
            <div
              class="font-semibold text-gray-900 dark:text-gray-100"
            >
              Never
            </div>
            <div
              class="text-gray-500 dark:text-gray-400"
            >
              Next Review
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex items-center p-6 pt-0 "
  >
    <div
      class="flex flex-wrap gap-2 w-full"
    >
      <button
        aria-label="Mark as mastered"
        class="flex-1 px-3 py-2 rounded-lg text-sm font-medium transition-colors bg-gray-100 dark:bg-gray-700 text-gray-700 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-600"
      >
        <svg
          class="lucide lucide-check h-4 w-4 inline mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        Mark Mastered
      </button>
      <button
        aria-label="Mark for review"
        class="flex-1 px-3 py-2 bg-orange-100 dark:bg-orange-900/30 text-orange-700 dark:text-orange-300 hover:bg-orange-200 dark:hover:bg-orange-900/50 rounded-lg text-sm font-medium transition-colors"
      >
        <svg
          class="lucide lucide-rotate-ccw h-4 w-4 inline mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
        </svg>
        Review
      </button>
      <button
        aria-label="Add to list"
        class="px-3 py-2 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 hover:bg-purple-200 dark:hover:bg-purple-900/50 rounded-lg text-sm font-medium transition-colors"
      >
        <svg
          class="lucide lucide-plus h-4 w-4 inline mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Add to List
      </button>
      <button
        aria-label="Edit card"
        class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
        title="Edit"
      >
        <svg
          class="lucide lucide-pen-square h-4 w-4 text-gray-600 dark:text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
          />
          <path
            d="M18.5 2.5a2.12 2.12 0 0 1 3 3L12 15l-4 1 1-4Z"
          />
        </svg>
      </button>
      <button
        aria-label="Delete card"
        class="p-2 hover:bg-red-50 dark:hover:bg-red-900/20 rounded-lg transition-colors"
        title="Delete"
      >
        <svg
          class="lucide lucide-trash2 h-4 w-4 text-red-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 6h18"
          />
          <path
            d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
          />
          <path
            d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
          />
          <line
            x1="10"
            x2="10"
            y1="11"
            y2="17"
          />
          <line
            x1="14"
            x2="14"
            y1="11"
            y2="17"
          />
        </svg>
      </button>
      <button
        aria-label="Share card"
        class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
        title="Share"
      >
        <svg
          class="lucide lucide-share2 h-4 w-4 text-gray-600 dark:text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </button>
      <button
        aria-label="Report issue"
        class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
        title="Report Issue"
      >
        <svg
          class="lucide lucide-alert-circle h-4 w-4 text-gray-600 dark:text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`VocabularyCard Component > Snapshot Tests > should match snapshot for expanded mode 1`] = `
<div
  aria-label="Vocabulary card for magnificent"
  class="rounded-lg border bg-card text-card-foreground shadow-sm  vocabulary-card expanded  "
  role="article"
  tabindex="0"
>
  <div
    class="flex flex-col space-y-1.5 p-6 "
  >
    <div
      class="flex items-start justify-between"
    >
      <div
        class="flex-1"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight text-xl"
        >
          magnificent
        </h3>
        <p
          class="text-sm text-muted-foreground mt-1"
        >
          adjective
        </p>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <button
          aria-label="Play pronunciation"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors"
          title="Play pronunciation"
        >
          <svg
            class="lucide lucide-volume2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"
            />
            <path
              d="M15.54 8.46a5 5 0 0 1 0 7.07"
            />
            <path
              d="M19.07 4.93a10 10 0 0 1 0 14.14"
            />
          </svg>
        </button>
        <button
          aria-label="Add to favorites"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors text-gray-400"
          title="Add to favorites"
        >
          <svg
            class="lucide lucide-heart h-4 w-4 "
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0 "
  >
    <div
      class="space-y-4"
    >
      <button
        aria-label="Show Spanish"
        class="w-full py-3 px-4 bg-blue-50 dark:bg-blue-900/20 hover:bg-blue-100 dark:hover:bg-blue-900/30 rounded-lg transition-colors text-blue-700 dark:text-blue-300 font-medium"
      >
        Flip to Spanish →
      </button>
      <div>
        <h4
          class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
        >
          Definition
        </h4>
        <p
          class="text-gray-600 dark:text-gray-400"
        >
          Extremely beautiful, elaborate, or impressive
        </p>
      </div>
      <div>
        <h4
          class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
        >
          Pronunciation
        </h4>
        <p
          class="font-mono text-sm text-gray-600 dark:text-gray-400"
        >
          mæɡˈnɪfɪsənt
        </p>
      </div>
      <div>
        <h4
          class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
        >
          Example Usage
        </h4>
        <ul
          class="space-y-1"
        >
          <li
            class="text-sm text-gray-600 dark:text-gray-400 italic"
          >
            "
            The view from the mountain was magnificent.
            "
          </li>
          <li
            class="text-sm text-gray-600 dark:text-gray-400 italic"
          >
            "
            She wore a magnificent gown to the gala.
            "
          </li>
        </ul>
      </div>
      <div
        class="space-y-3 pt-2 border-t border-gray-200 dark:border-gray-700"
      >
        <div>
          <div
            class="flex items-center justify-between mb-1"
          >
            <span
              class="text-xs font-medium text-gray-700 dark:text-gray-300"
            >
              Mastery Level
            </span>
            <span
              class="text-xs font-semibold text-gray-900 dark:text-gray-100"
            >
              0
              %
            </span>
          </div>
          <div
            class="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-2"
          >
            <div
              aria-label="Mastery level: 0%"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="h-2 rounded-full transition-all duration-300 bg-red-500"
              role="progressbar"
              style="width: 0%;"
            />
          </div>
        </div>
        <div
          class="grid grid-cols-3 gap-2 text-xs"
        >
          <div
            class="text-center"
          >
            <div
              class="font-semibold text-gray-900 dark:text-gray-100"
            >
              0
            </div>
            <div
              class="text-gray-500 dark:text-gray-400"
            >
              Reviewed
            </div>
          </div>
          <div
            class="text-center"
          >
            <div
              class="font-semibold text-gray-900 dark:text-gray-100"
            >
              Never
            </div>
            <div
              class="text-gray-500 dark:text-gray-400"
            >
              Last Review
            </div>
          </div>
          <div
            class="text-center"
          >
            <div
              class="font-semibold text-gray-900 dark:text-gray-100"
            >
              Never
            </div>
            <div
              class="text-gray-500 dark:text-gray-400"
            >
              Next Review
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex items-center p-6 pt-0 "
  >
    <div
      class="flex flex-wrap gap-2 w-full"
    >
      <button
        aria-label="Mark as mastered"
        class="flex-1 px-3 py-2 rounded-lg text-sm font-medium transition-colors bg-gray-100 dark:bg-gray-700 text-gray-700 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-600"
      >
        <svg
          class="lucide lucide-check h-4 w-4 inline mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        Mark Mastered
      </button>
      <button
        aria-label="Mark for review"
        class="flex-1 px-3 py-2 bg-orange-100 dark:bg-orange-900/30 text-orange-700 dark:text-orange-300 hover:bg-orange-200 dark:hover:bg-orange-900/50 rounded-lg text-sm font-medium transition-colors"
      >
        <svg
          class="lucide lucide-rotate-ccw h-4 w-4 inline mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
        </svg>
        Review
      </button>
      <button
        aria-label="Add to list"
        class="px-3 py-2 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 hover:bg-purple-200 dark:hover:bg-purple-900/50 rounded-lg text-sm font-medium transition-colors"
      >
        <svg
          class="lucide lucide-plus h-4 w-4 inline mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Add to List
      </button>
      <button
        aria-label="Edit card"
        class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
        title="Edit"
      >
        <svg
          class="lucide lucide-pen-square h-4 w-4 text-gray-600 dark:text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
          />
          <path
            d="M18.5 2.5a2.12 2.12 0 0 1 3 3L12 15l-4 1 1-4Z"
          />
        </svg>
      </button>
      <button
        aria-label="Delete card"
        class="p-2 hover:bg-red-50 dark:hover:bg-red-900/20 rounded-lg transition-colors"
        title="Delete"
      >
        <svg
          class="lucide lucide-trash2 h-4 w-4 text-red-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 6h18"
          />
          <path
            d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
          />
          <path
            d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
          />
          <line
            x1="10"
            x2="10"
            y1="11"
            y2="17"
          />
          <line
            x1="14"
            x2="14"
            y1="11"
            y2="17"
          />
        </svg>
      </button>
      <button
        aria-label="Share card"
        class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
        title="Share"
      >
        <svg
          class="lucide lucide-share2 h-4 w-4 text-gray-600 dark:text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </button>
      <button
        aria-label="Report issue"
        class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
        title="Report Issue"
      >
        <svg
          class="lucide lucide-alert-circle h-4 w-4 text-gray-600 dark:text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`VocabularyCard Component > Snapshot Tests > should match snapshot for flipped state 1`] = `
<div
  aria-label="Vocabulary card for magnificent"
  class="rounded-lg border bg-card text-card-foreground shadow-sm  vocabulary-card expanded flipped "
  role="article"
  tabindex="0"
>
  <div
    class="flex flex-col space-y-1.5 p-6 "
  >
    <div
      class="flex items-start justify-between"
    >
      <div
        class="flex-1"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight text-xl"
        >
          magnífico
        </h3>
        <p
          class="text-sm text-muted-foreground mt-1"
        >
          Spanish Translation
        </p>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <button
          aria-label="Play pronunciation"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors"
          title="Play pronunciation"
        >
          <svg
            class="lucide lucide-volume2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"
            />
            <path
              d="M15.54 8.46a5 5 0 0 1 0 7.07"
            />
            <path
              d="M19.07 4.93a10 10 0 0 1 0 14.14"
            />
          </svg>
        </button>
        <button
          aria-label="Add to favorites"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors text-gray-400"
          title="Add to favorites"
        >
          <svg
            class="lucide lucide-heart h-4 w-4 "
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0 "
  >
    <div
      class="space-y-4"
    >
      <button
        aria-label="Show English"
        class="w-full py-3 px-4 bg-blue-50 dark:bg-blue-900/20 hover:bg-blue-100 dark:hover:bg-blue-900/30 rounded-lg transition-colors text-blue-700 dark:text-blue-300 font-medium"
      >
        ← Show English
      </button>
      <div
        class="space-y-3 pt-2 border-t border-gray-200 dark:border-gray-700"
      >
        <div>
          <div
            class="flex items-center justify-between mb-1"
          >
            <span
              class="text-xs font-medium text-gray-700 dark:text-gray-300"
            >
              Mastery Level
            </span>
            <span
              class="text-xs font-semibold text-gray-900 dark:text-gray-100"
            >
              0
              %
            </span>
          </div>
          <div
            class="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-2"
          >
            <div
              aria-label="Mastery level: 0%"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="h-2 rounded-full transition-all duration-300 bg-red-500"
              role="progressbar"
              style="width: 0%;"
            />
          </div>
        </div>
        <div
          class="grid grid-cols-3 gap-2 text-xs"
        >
          <div
            class="text-center"
          >
            <div
              class="font-semibold text-gray-900 dark:text-gray-100"
            >
              0
            </div>
            <div
              class="text-gray-500 dark:text-gray-400"
            >
              Reviewed
            </div>
          </div>
          <div
            class="text-center"
          >
            <div
              class="font-semibold text-gray-900 dark:text-gray-100"
            >
              Never
            </div>
            <div
              class="text-gray-500 dark:text-gray-400"
            >
              Last Review
            </div>
          </div>
          <div
            class="text-center"
          >
            <div
              class="font-semibold text-gray-900 dark:text-gray-100"
            >
              Never
            </div>
            <div
              class="text-gray-500 dark:text-gray-400"
            >
              Next Review
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex items-center p-6 pt-0 "
  >
    <div
      class="flex flex-wrap gap-2 w-full"
    >
      <button
        aria-label="Mark as mastered"
        class="flex-1 px-3 py-2 rounded-lg text-sm font-medium transition-colors bg-gray-100 dark:bg-gray-700 text-gray-700 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-600"
      >
        <svg
          class="lucide lucide-check h-4 w-4 inline mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        Mark Mastered
      </button>
      <button
        aria-label="Mark for review"
        class="flex-1 px-3 py-2 bg-orange-100 dark:bg-orange-900/30 text-orange-700 dark:text-orange-300 hover:bg-orange-200 dark:hover:bg-orange-900/50 rounded-lg text-sm font-medium transition-colors"
      >
        <svg
          class="lucide lucide-rotate-ccw h-4 w-4 inline mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
        </svg>
        Review
      </button>
      <button
        aria-label="Add to list"
        class="px-3 py-2 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 hover:bg-purple-200 dark:hover:bg-purple-900/50 rounded-lg text-sm font-medium transition-colors"
      >
        <svg
          class="lucide lucide-plus h-4 w-4 inline mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Add to List
      </button>
      <button
        aria-label="Edit card"
        class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
        title="Edit"
      >
        <svg
          class="lucide lucide-pen-square h-4 w-4 text-gray-600 dark:text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
          />
          <path
            d="M18.5 2.5a2.12 2.12 0 0 1 3 3L12 15l-4 1 1-4Z"
          />
        </svg>
      </button>
      <button
        aria-label="Delete card"
        class="p-2 hover:bg-red-50 dark:hover:bg-red-900/20 rounded-lg transition-colors"
        title="Delete"
      >
        <svg
          class="lucide lucide-trash2 h-4 w-4 text-red-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 6h18"
          />
          <path
            d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
          />
          <path
            d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
          />
          <line
            x1="10"
            x2="10"
            y1="11"
            y2="17"
          />
          <line
            x1="14"
            x2="14"
            y1="11"
            y2="17"
          />
        </svg>
      </button>
      <button
        aria-label="Share card"
        class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
        title="Share"
      >
        <svg
          class="lucide lucide-share2 h-4 w-4 text-gray-600 dark:text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </button>
      <button
        aria-label="Report issue"
        class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
        title="Report Issue"
      >
        <svg
          class="lucide lucide-alert-circle h-4 w-4 text-gray-600 dark:text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`VocabularyCard Component > Snapshot Tests > should match snapshot with all features enabled 1`] = `
<div
  aria-label="Vocabulary card for magnificent"
  class="rounded-lg border bg-card text-card-foreground shadow-sm  vocabulary-card expanded  "
  role="article"
  tabindex="0"
>
  <div
    class="flex flex-col space-y-1.5 p-6 "
  >
    <div
      class="flex items-start justify-between"
    >
      <div
        class="flex-1"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight text-xl"
        >
          magnificent
        </h3>
        <p
          class="text-sm text-muted-foreground mt-1"
        >
          adjective
        </p>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <button
          aria-label="Play pronunciation"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors"
          title="Play pronunciation"
        >
          <svg
            class="lucide lucide-volume2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polygon
              points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"
            />
            <path
              d="M15.54 8.46a5 5 0 0 1 0 7.07"
            />
            <path
              d="M19.07 4.93a10 10 0 0 1 0 14.14"
            />
          </svg>
        </button>
        <button
          aria-label="Remove from favorites"
          class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-full transition-colors text-red-500"
          title="Remove from favorites"
        >
          <svg
            class="lucide lucide-heart h-4 w-4 fill-current"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0 "
  >
    <div
      class="space-y-4"
    >
      <button
        aria-label="Show Spanish"
        class="w-full py-3 px-4 bg-blue-50 dark:bg-blue-900/20 hover:bg-blue-100 dark:hover:bg-blue-900/30 rounded-lg transition-colors text-blue-700 dark:text-blue-300 font-medium"
      >
        Flip to Spanish →
      </button>
      <div>
        <h4
          class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
        >
          Definition
        </h4>
        <p
          class="text-gray-600 dark:text-gray-400"
        >
          Extremely beautiful, elaborate, or impressive
        </p>
      </div>
      <div>
        <h4
          class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
        >
          Pronunciation
        </h4>
        <p
          class="font-mono text-sm text-gray-600 dark:text-gray-400"
        >
          mæɡˈnɪfɪsənt
        </p>
      </div>
      <div>
        <h4
          class="text-sm font-semibold text-gray-700 dark:text-gray-300 mb-2"
        >
          Example Usage
        </h4>
        <ul
          class="space-y-1"
        >
          <li
            class="text-sm text-gray-600 dark:text-gray-400 italic"
          >
            "
            The view from the mountain was magnificent.
            "
          </li>
          <li
            class="text-sm text-gray-600 dark:text-gray-400 italic"
          >
            "
            She wore a magnificent gown to the gala.
            "
          </li>
        </ul>
      </div>
      <div
        class="space-y-3 pt-2 border-t border-gray-200 dark:border-gray-700"
      >
        <div>
          <div
            class="flex items-center justify-between mb-1"
          >
            <span
              class="text-xs font-medium text-gray-700 dark:text-gray-300"
            >
              Mastery Level
            </span>
            <span
              class="text-xs font-semibold text-gray-900 dark:text-gray-100"
            >
              85
              %
            </span>
          </div>
          <div
            class="w-full bg-gray-200 dark:bg-gray-700 rounded-full h-2"
          >
            <div
              aria-label="Mastery level: 85%"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="85"
              class="h-2 rounded-full transition-all duration-300 bg-green-500"
              role="progressbar"
              style="width: 85%;"
            />
          </div>
        </div>
        <div
          class="grid grid-cols-3 gap-2 text-xs"
        >
          <div
            class="text-center"
          >
            <div
              class="font-semibold text-gray-900 dark:text-gray-100"
            >
              20
            </div>
            <div
              class="text-gray-500 dark:text-gray-400"
            >
              Reviewed
            </div>
          </div>
          <div
            class="text-center"
          >
            <div
              class="font-semibold text-gray-900 dark:text-gray-100"
            >
              Sep 14, 2025
            </div>
            <div
              class="text-gray-500 dark:text-gray-400"
            >
              Last Review
            </div>
          </div>
          <div
            class="text-center"
          >
            <div
              class="font-semibold text-gray-900 dark:text-gray-100"
            >
              Oct 19, 2025
            </div>
            <div
              class="text-gray-500 dark:text-gray-400"
            >
              Next Review
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <span
          class="inline-flex items-center gap-1 px-2 py-1 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 rounded-full text-xs"
        >
          Advanced
          <button
            aria-label="Remove from Advanced"
            class="hover:text-purple-900 dark:hover:text-purple-100"
          >
            <svg
              class="lucide lucide-x h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </span>
        <span
          class="inline-flex items-center gap-1 px-2 py-1 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 rounded-full text-xs"
        >
          Test Prep
          <button
            aria-label="Remove from Test Prep"
            class="hover:text-purple-900 dark:hover:text-purple-100"
          >
            <svg
              class="lucide lucide-x h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    class="flex items-center p-6 pt-0 "
  >
    <div
      class="flex flex-wrap gap-2 w-full"
    >
      <button
        aria-label="Marked as mastered"
        class="flex-1 px-3 py-2 rounded-lg text-sm font-medium transition-colors bg-green-100 dark:bg-green-900/30 text-green-700 dark:text-green-300"
      >
        <svg
          class="lucide lucide-check h-4 w-4 inline mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        Mastered
      </button>
      <button
        aria-label="Mark for review"
        class="flex-1 px-3 py-2 bg-orange-100 dark:bg-orange-900/30 text-orange-700 dark:text-orange-300 hover:bg-orange-200 dark:hover:bg-orange-900/50 rounded-lg text-sm font-medium transition-colors"
      >
        <svg
          class="lucide lucide-rotate-ccw h-4 w-4 inline mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
        </svg>
        Review
      </button>
      <button
        aria-label="Add to list"
        class="px-3 py-2 bg-purple-100 dark:bg-purple-900/30 text-purple-700 dark:text-purple-300 hover:bg-purple-200 dark:hover:bg-purple-900/50 rounded-lg text-sm font-medium transition-colors"
      >
        <svg
          class="lucide lucide-plus h-4 w-4 inline mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Add to List
      </button>
      <button
        aria-label="Edit card"
        class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
        title="Edit"
      >
        <svg
          class="lucide lucide-pen-square h-4 w-4 text-gray-600 dark:text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
          />
          <path
            d="M18.5 2.5a2.12 2.12 0 0 1 3 3L12 15l-4 1 1-4Z"
          />
        </svg>
      </button>
      <button
        aria-label="Delete card"
        class="p-2 hover:bg-red-50 dark:hover:bg-red-900/20 rounded-lg transition-colors"
        title="Delete"
      >
        <svg
          class="lucide lucide-trash2 h-4 w-4 text-red-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 6h18"
          />
          <path
            d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
          />
          <path
            d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
          />
          <line
            x1="10"
            x2="10"
            y1="11"
            y2="17"
          />
          <line
            x1="14"
            x2="14"
            y1="11"
            y2="17"
          />
        </svg>
      </button>
      <button
        aria-label="Share card"
        class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
        title="Share"
      >
        <svg
          class="lucide lucide-share2 h-4 w-4 text-gray-600 dark:text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="5"
            r="3"
          />
          <circle
            cx="6"
            cy="12"
            r="3"
          />
          <circle
            cx="18"
            cy="19"
            r="3"
          />
          <line
            x1="8.59"
            x2="15.42"
            y1="13.51"
            y2="17.49"
          />
          <line
            x1="15.41"
            x2="8.59"
            y1="6.51"
            y2="10.49"
          />
        </svg>
      </button>
      <button
        aria-label="Report issue"
        class="p-2 hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg transition-colors"
        title="Report Issue"
      >
        <svg
          class="lucide lucide-alert-circle h-4 w-4 text-gray-600 dark:text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
